--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.1.3",
     "@angular/animations": "9.0.0",
     "@angular/common": "9.0.0",
     "@angular/compiler": "9.0.0",
@@ -38,38 +37,57 @@
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/router": "9.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.0",
-    "zone.js": "^0.10.2",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
+    "@nestjs/jwt": "^7.0.0",
+    "@nestjs/mongoose": "^6.4.0",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^6.8.3",
-    "reflect-metadata": "^0.1.13"
+    "@nestjs/swagger": "^4.5.0",
+    "@nrwl/angular": "9.1.3",
+    "@types/ejs": "^3.0.1",
+    "aws-sdk": "^2.646.0",
+    "bcrypt": "^4.0.1",
+    "core-js": "^2.5.4",
+    "ejs": "^3.0.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.6",
+    "nest-logger": "^5.0.1",
+    "nest-winston": "^1.3.2",
+    "nestjs-easyconfig": "^1.8.8",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.5.0",
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.2.1",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.900.1",
     "@angular/cli": "9.0.1",
-    "@nrwl/workspace": "9.1.3",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.19.1",
-    "@nrwl/nest": "9.1.3",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
-    "@angular-devkit/build-angular": "0.900.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.0.0",
-    "@nrwl/jest": "9.1.3",
-    "jest": "24.9.0",
-    "@types/jest": "24.9.1",
-    "ts-jest": "24.0.0",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.1.3",
-    "@nrwl/node": "9.1.3",
     "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3"
+    "@nestjs/testing": "^6.8.3",
+    "@nrwl/cypress": "9.1.3",
+    "@nrwl/jest": "9.1.3",
+    "@nrwl/nest": "9.1.3",
+    "@nrwl/node": "9.1.3",
+    "@nrwl/workspace": "9.1.3",
+    "@types/jest": "24.9.1",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "jest": "24.9.0",
+    "jest-preset-angular": "8.0.0",
+    "prettier": "1.19.1",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.7.4"
   }
 }
