--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "nx": "nx",
     "start": "ng serve",
+    "start:api": "ng serve api",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -53,6 +54,8 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.6",
+    "mongoose-unique-validator": "^2.0.3",
+    "mongoose-validation-error-transform": "^0.0.5",
     "nest-logger": "^5.0.1",
     "nest-winston": "^1.3.2",
     "nestjs-easyconfig": "^1.8.8",
