--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "apps/frontend/src/assets"
             ],
             "styles": [
-              "apps/frontend/src/styles.scss"
+              "apps/frontend/src/styles.scss",
+              "./node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
