--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,9 @@
               }
             ],
             "styles": [
-              "apps/frontend/src/styles.scss",
               "./node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "apps/frontend/src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js"
