--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +52,7 @@
     "@sindresorhus/to-milliseconds": "^1.2.0",
     "@tinymce/tinymce-angular": "^3.3.1",
     "@types/ejs": "^3.0.0",
+    "@types/passport-jwt": "^3.0.3",
     "@types/request": "^2.48.3",
     "angularx-social-login": "^2.2.1",
     "aws-sdk": "^2.561.0",
@@ -76,6 +76,8 @@
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-take-until-destroy": "^5.4.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "request": "^2.88.0",
     "rxjs": "~6.4.0",
