--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
             "styles": [
               "./node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "apps/frontend/src/styles.scss"
+              "apps/frontend/src/styles.scss",
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js"
